# BERT-News-Classification-THUCTC

./: .gitignore  README.md  main.py  pyproject.toml
backend/: data_analyzer.py  data_augmenter.py  data_extractor.py  data_preprocessor.py
backend/data_utils/: data_analyzer.py  data_extractor.py  data_preprocessor.py
backend/models/: naive_bayes.py
data/: detailed_analysis_report.txt
data/reports/: augment_analysis_report.txt  augmented_naive_bayes_report.txt  naive_bayes_report.txt
frontend/: App.tsx  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  constants.ts  index.css
frontend/src/components/: ResultSection.tsx
frontend/src/services/: mockApi.ts
